2015-12-31  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_formatter): Restore the cursor position differently.

2015-12-30  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main), src/files.c (open_buffer): Don't try to position
	the cursor when opening a buffer failed (because the user specified a
	directory, for example).  This fixes Savannah bug #46778.
	* doc/syntax/ocaml.nanorc: Normalize the comments.

2015-12-29  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/{c,objc,asm}.nanorc: Disable the regex for multiline
	strings as it colours some things wrong and is a glutton on time.

2015-12-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (do_writeout, do_writeout_void), src/global.c
	(shortcut_init, strtosc), src/nano.c (do_exit, close_and_go),
	doc/man/nanorc.5, doc/texinfo/nano.texi: In the writeout menu,
	offer ^Q to close and discard the buffer without saving it.  By
	default, the key is bound only when --tempfile is in effect.
	* doc/man/nanorc.5: Improve ordering of bindable functions.
	* src/files.c (read_file): Don't open an extra blank buffer when
	an empty file is read.  Bug was exposed by r5498, December 18.
	* src/files.c (do_writeout): When the user decides to save the
	buffer after all, go back to the filename prompt because the
	buffer may not have a name yet.  This fixes Savannah bug #46752.

2015-12-23  Mike Frysinger  <vapier@gentoo.org>
	* doc/syntax/autoconf.nanorc: Handle .m4 files too, add the "elif"
	keyword, handle dnl comments better, and mark trailing whitespace.
	* src/files.c (save_history, save_poshistory): Don't make the user
	hit Enter when there's an error saving history state at exit; it is
	pointless and annoying.  Just notify the user and move on.
	* src/nano.c (main): On most 64-bit systems, casting a pointer to
	an integer can cause valid pointers to be truncated and rejected.
	Rework the code to test for the two invalid values directly.
