@@ -1,5 +1,6 @@
 2015-12-31  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_formatter): Restore the cursor position differently.
+	* src/search.c (do_gotopos): Delete this now unused function.
 
 2015-12-30  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c (main), src/files.c (open_buffer): Don't try to position
